--- a/research.html
+++ b/research.html
@@ -25,11 +25,11 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p> <b>Feng, L.</b> and <b>Yang, G.</b>* (2022+). "Deep Kronecker Network", under review. [<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
+<li><p><b>Yang, G.</b>* and <b>Feng, L.</b> (2022+). "Region Detection and Image Clustering via Sparse Kronecker Product Decomposition", under review. </p>
 </li>
 </ul>
 <ul>
-<li><p><b>Yang, G.</b>* and <b>Feng, L.</b> (2022+). "Region Detection and Image Clustering via Sparse Kronecker Product Decomposition", under review. </p>
+<li><p> <b>Feng, L.</b> and <b>Yang, G.</b>* (2022+). "Deep Kronecker Network", Biometrika, under revision. [<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
 </li>
 </ul>
  <ul>
