--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ Email: lfeng@hku.hk</p>
 </li>
 </ul>
 <h2>Propective Student</h2>
-<p>I am currently lookingly for PhD students and Postdocs. Welcome to drop me an email if interested.</p>
+<p>I am currently lookingly for PhD students and <b>Postdocs<b>. Welcome to drop me an email if interested.</p>
+<h2>HKU Summer Workshop [<a href="https://saasweb.hku.hk/workshop/sda2023/">link</a>]</h2>
 </td>
 </tr>
 </table>
