--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@
 </li>
 </ul>
  <ul>
-<li><p><b>Wu, S.</b>* and <b>Feng, L.</b> (2023). "Sparse Kronecker Product Decomposition: A General Framework of Signal Region Detection in Image Regression", Journal of Royal Statistical Society, series B (JRSSB), accepted. [<a href="https://academic.oup.com/jrsssb/advance-article/doi/10.1093/jrsssb/qkad024/7145706">link</a>][<a href="https://arxiv.org/abs/2210.09128">arXiv</a>].</p>
+<li><p><b>Wu, S.</b>* and <b>Feng, L.</b> (2023). "Sparse Kronecker Product Decomposition: A General Framework of Signal Region Detection in Image Regression", Journal of Royal Statistical Society, series B (JRSSB), 85(3), 783-809. [<a href="https://academic.oup.com/jrsssb/advance-article/doi/10.1093/jrsssb/qkad024/7145706">link</a>][<a href="https://arxiv.org/abs/2210.09128">arXiv</a>].</p>
 </li>
 </ul>
 <ul>
