--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@ Email: lfeng@hku.hk</p>
 <li><p>High-dimensional data analysis</p>
 </li>
 </ul>
+<h2>Fundings</h2>
+<p>My research is kindly supported by </p>
+<ul>
+<li><p> (2023-2026) Hong Kong RGC GRF Grant  17301123 </p>
+</li>
+<li><p> (2022-2025) Hong Kong RGC ECS Grant 21313922 </p>
+</li>
+<li><p> (2022-) HKU Start-up Grant</p>
+</li>
+</ul>
 <h2>Propective Student</h2>
 <p>I am currently lookingly for PhD students and <b>Postdocs</b>. Welcome to drop me an email if interested.</p>
 </td>
