--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ University of Hong Kong<br />
 Email: lfeng@hku.hk</p>
 </td></tr></table>
 <h2>Propective Student</h2>
-<p>I am currently lookingly for PhD students and <b>Postdocs</b>. Welcome to drop me an email if interested.</p>
+<p>I am currently lookingly for PhD students and Postdocs. Welcome to drop me an email if interested.</p>
 <h2>About me</h2>
 <p>I am an Assistant Professor in the Department of Statistics and Actuarial Science, University of Hong Kong. I obtained my PhD in Statistics from Rutgers University, advised by Profs. Cun-Hui Zhang and Lee Dicker. After that, I did my Postdoctoral training in the Department of Biostatistics at Yale University, supervised by Prof. Heping Zhang.  My current research interests focus on statistical machine learning, image data analysis, high-dimensional statistics, deep learning, etc. </p>
 <h2>Education</h2>
