--- a/research.html
+++ b/research.html
@@ -21,7 +21,7 @@
 <div id="toptitle">
 <h1>Publications and Preprints</h1>
 </div>
-<p>* stands for PhD students. &nbsp   # stands for corresponding author. &nbsp &#8224 stands for alphabetical authorship. </p>
+<p>* stands for PhD students. &nbsp   &#8224 stands for corresponding author. &nbsp # stands for alphabetical authorship. </p>
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
@@ -29,7 +29,7 @@
 </li>
 </ul>
 <ul>
-<li><p> <b>Feng, L.</b> and <b>Yang, G.</b>* (2024). "Deep Kronecker Network", Biometrika, 111(2): 707-714. [<a href="https://academic.oup.com/biomet/advance-article-abstract/doi/10.1093/biomet/asad049/7257066?redirectedFrom=fulltext">link</a>][<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
+<li><p> <b>Feng, L.</b>&#8224 and <b>Yang, G.</b>* (2024). "Deep Kronecker Network", Biometrika, 111(2): 707-714. [<a href="https://academic.oup.com/biomet/advance-article-abstract/doi/10.1093/biomet/asad049/7257066?redirectedFrom=fulltext">link</a>][<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
 </li>
 </ul>
  <ul>
@@ -42,7 +42,7 @@
 </li>
 </ul>
 <ul>
-<li><p>Bi, X.<sup>+</sup>, <b>Feng, L.</b><sup>+</sup>, Li, C.<sup>+</sup> and Zhang, H. (2021)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", Journal of American Statistical Association (JASA), 117(538): 602-616. [<a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2021.2006666">link</a>].</p>
+<li><p>Bi, X.<sup>#</sup>, <b>Feng, L.</b><sup>#</sup>, Li, C.<sup>#</sup> and Zhang, H. (2021)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", Journal of American Statistical Association (JASA), 117(538): 602-616. [<a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2021.2006666">link</a>].</p>
 </li>
 </ul>
 <ul>
